add sample of images by default in librairy

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -45,7 +45,7 @@
 						{% csrf_token %}
 						{{ login_form.username }}
 						{{ login_form.password }}
-						<input type="submit" value="Connection" />
+						<input type="submit" value="Connexion" />
 						</form>
 					</li>
 					<li><a class="doc popup" href="{% url "user_suscription" %}">Pas encore inscrit ? C'est ici !</a></li>
