--- a/templates/user/user_login.html
+++ b/templates/user/user_login.html
@@ -42,7 +42,7 @@
     </div>
     {% endfor %}
         <p class="center-align">
-        <input type="submit" value="Connection" />
+        <input type="submit" value="Connexion" />
         <a class="popup" href="{% url "user_suscription" %}">
             <button type="button">Créer un compte</button>
         </a>
