Add absolute url in Picture table, and a link to original file in librairy listing

--- a/templates/librairy/librairy_list.html
+++ b/templates/librairy/librairy_list.html
@@ -25,6 +25,7 @@ id="{{ picture.id }}">
 			</div>
 			<a class="thumb-menu" href="#"><span class="hidden">menu de l'onglet</span></a>
 			<ul class="thumb-popover popover">
+                <li><a target="blank" href="{{ picture.absolute_url }}">Ouvrir l'original</a></li>
                 {% if collection %}
                 <li><a class="del" target="blank" data-url="{% url "librairy_collection" collection.0 collection.1 %}" href="{% url "librairy_delete_pict_from_collection" collection.0 collection.1 picture.id %}">Supprimer de la collection</a></li>
 				<hr />
