Finalisation of contact app

--- a/phiroom/assets/css/side-panels.less
+++ b/phiroom/assets/css/side-panels.less
@@ -184,13 +184,7 @@
     // second level menu lists
     .cadre2b > ul {
         position: relative;
-<<<<<<< BEGIN MERGE CONFLICT: local copy shown first <<<<<<<<<<<<<<<
-    //    display: none; /* changed in librairy */
-======= COMMON ANCESTOR content follows ============================
-    //    display: none;
-======= MERGED IN content follows ==================================
-        display: none;
->>>>>>> END MERGE CONFLICT >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+        display: none; /* changed in librairy */
         max-height: 496px;
         overflow: auto;
     }
