--- a/phiroom/assets/css/controller.less
+++ b/phiroom/assets/css/controller.less
@@ -37,7 +37,7 @@
 // 3.1     $ cd in phiroom root directory
 // 3.2     $ cd phiroom/assets/css
 // 3.3     $ lessc -x controller.less > phiroom.min.css
-// 3.4     $ gzip phiroom.css
+// 3.4     $ gzip phiroom.min.css
 // 4. in template file "templates/base.html"
 // 4.1     comment <link rel="stylesheet/less" href="{% static 'css/controller.less' %}" />
 // 4.2     comment <script src="{% static 'scripts/less-1.4.1.min.js' %}" type="text/javascript"></script>
@@ -85,6 +85,9 @@
 
 // weblog
 @import '@{base-css}weblog.less';
+
+// contact
+@import '@{base-css}contact.less';
 
 // picture of days
 @import '@{base-css}pictofday.less';
