--- a/phiroom/assets/css/forms.less
+++ b/phiroom/assets/css/forms.less
@@ -163,6 +163,9 @@ input[type="submit"], button {
         height: 24px;
         padding: 2px 6px 0px 6px;;
     }
+    &.large-button {
+        width: auto;
+    }
 }
 
 input[type="submit"]:hover, input[type="submit"]:focus, button:hover, button:focus, a:hover button, a:focus button {
@@ -310,4 +313,6 @@ div.input_group {
         }
     }
 }
-
+.warning-message {
+    font-size: 1.7em
+}
