--- a/phiroom/assets/css/layout.less
+++ b/phiroom/assets/css/layout.less
@@ -183,6 +183,7 @@ body {
             margin-right: auto;
             margin-left: auto;
             max-width: 650px;
+            position: relative;
         }
     }
 
