--- a/phiroom/assets/css/weblog.less
+++ b/phiroom/assets/css/weblog.less
@@ -33,7 +33,7 @@
 
 // articles
 article, div#pagination {
-    div.article_content {
+    div.entry-content {
         position: relative;
         width: 90%;
         margin-right: auto;
