--- a/templates/contact/contact_edit.html
+++ b/templates/contact/contact_edit.html
@@ -40,7 +40,7 @@
 <div class="v3"></div><!-- v3 -->
 <h2 id="preview">Aperçu :</h2>
 <article>
-    <div class="article_content">
+    <div class="entry-content">
     <header>
         <h1>{{ contact_preview.title }}</h1>
     </header>
