--- a/templates/contact/contact_sent.html
+++ b/templates/contact/contact_sent.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <article id="main">
-    <div class="article_content">
+    <div class="entry-content">
     <div id="contact-content">
     <p class="center-align"><strong>
         <span class="warning-message">Votre message a bien été envoyé !</span>
@@ -20,6 +20,6 @@
             <p id="powered" class="center-align"><a target="_blank" href="{{ phiroom }}">Powered by Phiroom</a></p>
         </footer>
 
-    </div>{# article_content #}
+    </div>{# entry-content #}
 </article>
 {% endblock %}
