--- a/templates/help/help_base.html
+++ b/templates/help/help_base.html
@@ -38,7 +38,7 @@
 {% endblock %}
 {% block content %}
 {% load static %}
-    <article id="help"><div class="article_content">
+    <article id="help"><div class="entry-content">
         <header>
         <h1>Aide de Phiroom
             <a class="headerlink" href="#main" title="Lien vers cette section">¶</a></h1>
@@ -50,7 +50,7 @@
             <div class="v3"></div>{# v3 #}
             <p id="powered" class="center-align"><a target="_blank" href="{{ phiroom }}">Powered by Phiroom</a></p>
         </footer>
-    </div>{# article_content #}
+    </div>{# entry-content #}
     </article>
 {% endblock %}
 
