--- a/templates/librairy/librairy_list.html
+++ b/templates/librairy/librairy_list.html
@@ -68,7 +68,7 @@ id="{{ picture.id }}">
 	</article>
 {% empty %}
 	<article>
-        <div class="article_content">
+        <div class="entry-content">
 		<header>
 			<h1>Aucune image…</h1>
 		</header>
@@ -80,7 +80,7 @@ id="{{ picture.id }}">
 			<div class="v3"></div><!-- v3 -->
 
 		</footer>
-    </div>{# article_content #}
+    </div>{# entry-content #}
 	</article>
 {% endfor %}
 {% endspaceless %}
