--- a/templates/weblog/weblog_forms.html
+++ b/templates/weblog/weblog_forms.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 
 <article id="main">
-<div class="article_content">
+<div class="entry-content">
 {# if no form template given include auto one #}
 {% if not tempinclude %}
     {% include 'forms/forms_auto.html' %}
