--- a/templates/portfolios/portfolio_view.html
+++ b/templates/portfolios/portfolio_view.html
@@ -22,7 +22,7 @@
 <li>
     <figure>
 
-        <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/height-700/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
+        <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/large/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
             <img src="{{ MEDIA_URL }}images/previews/square-500/{{ picture.id }}.jpg" alt="{{ picture.title }}" />
         </a>
         <figcaption>
