--- a/templates/weblog/weblog_view.html
+++ b/templates/weblog/weblog_view.html
@@ -26,7 +26,7 @@
                 {% spaceless %}
                 {% for picture in entry.get_sorted_pictures %}
                 <li>
-                <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/height-700/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
+                <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/large/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
                     <img class="thumbs" src="{{ MEDIA_URL }}images/previews/square-500/{{ picture.id }}.jpg" alt="{{ picture.title }}" {#title="{{ picture.title }}"#} />
                 </a>
                 </li>
