Fix a bug of error500 instead of 404 when DEBUG was false, add custom error pages

--- a/phiroom/assets/css/typo.less
+++ b/phiroom/assets/css/typo.less
@@ -167,8 +167,11 @@ body {
     }
 
     // Error pages numbers
-    .error {
-        text-align: center;
+    h1.error {
+        font-size: 10em;
+        font-family: @sans;
+        font-style: normal;
+        margin: 0;
     }
 
     // Small caps
