Fix a bug with lightbox link in weblog list template

--- a/templates/weblog/weblog_list.html
+++ b/templates/weblog/weblog_list.html
@@ -52,7 +52,7 @@
                 {% spaceless %}
                 <p class="center-align">
                 {% if entry.n_pict %}
-                    <a href="{{ entry.absolute_url }}#/lightbox/{{ entry.get_n_first_pictures_id|slice:":1" }}/" rel="canonical">
+                    <a href="{{ entry.absolute_url }}#/lightbox/{{ entry.get_n_first_pictures_id.0 }}/" rel="canonical">
                 {% else %}
                     <a href="{{ entry.absolute_url }}" rel="canonical">
                 {% endif %}
